k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: scm-ads-api
  namespace: backend
  labels:
    app: scm-ads-api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: scm-ads-api
  template:
    metadata:
      labels:
        app: scm-ads-api
        version: v0.0.1
    spec:
      containers:
      - name: scm-ads-api
        image: smartcitymedia/scm-ads-api:0.0.56
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: scm-registrypullsecret
---
apiVersion: v1
kind: Service
metadata:
  name: scm-ads-api
  namespace: backend
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  selector:
    app: scm-ads-api
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: scm-ads-api
  namespace: backend
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`scm-ads-api.citypost.us`)
      kind: Rule
      services:
        - name: scm-ads-api
          port: 8080
  tls:
    secretName: traefik-cert
